Fix issue with dynamic slider height on mobile devices

--- a/assets/sass/modules/_header.sass
+++ b/assets/sass/modules/_header.sass
@@ -19,6 +19,7 @@
     height: em(55)
     width: em(55)
     position: relative
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
     img
       height: em(55)
 
