--- a/assets/sass/pages/home/_slider.sass
+++ b/assets/sass/pages/home/_slider.sass
@@ -9,7 +9,7 @@
       justify-content: space-around
 
   &-logo
-    padding: em(50) 0
+    margin: em(50) 0
     width: 40%
     img
       width: 100%
@@ -19,7 +19,7 @@
       width: 40%
     @include mediaQueryMax(em(690))
       width: 40vh 
-      padding: 5vh 0 0
+      margin: 5vh 0 0
 
   &-desc
     color: $textBlue
@@ -32,7 +32,7 @@
     @include mediaQuery(tablet)
       font-size: em(12)
     @include mediaQueryMax(em(690))
-      padding: 0 0 5vh
+      margin: 0 0 5vh
       width: 100%
       max-width: 315px
 
